2.0.0b2
 - fix: don't use area_um, deform, and bright_avg box filters by
   default (#19)
 - fix: bug+regression when removing plots (#21)
 - fix: `Pipeline.get_min_max` did not take into account final
   filter set in filter ray (#22)
 - fix: Do not set the selected filter to the current QuickView
   filter when hitting apply in the analysis view filter panel (#18)
 - enh: include (polygon) filter names in file names when
   exporting filters (#20)
2.0.0b1
 - feat: automatically rescale plot windows (#8)
 - feat: add auto XY-range checkbox for plotting (#9)
 - feat: allow to choose filter ray when computing statistics for
   data that is not loaded in the session (#11)
 - fix: computing statistics not working (str vs Path)
 - fix: disallow exporting the event index to .rtdc
   (it would be re-enumerated and this can be confusing)
 - fix: plot layout not correctly resized sometimes
 - fix: size of plot part in block matrix not always adjusted
 - fix: use sample names from session in export file names (#14)
 - fix: when exporting data or computing statistics, don't export
   data from disabled filter rays (#15)
2.0.0a27
 - feat: add developer mode
 - feat: display images on hover in polygon window in QuickView
 - feat: implement loading of (polygon) filters from file
 - feat: implement session saving and opening
 - feat: added perceptive colormaps and set viridis as default
 - feat: allow to set hue range for feature-colored scatter plots (#1)
 - feat: add colorbar (#1)
 - fix: hide confusing "Advances Export" plot menu in developer mode
 - fix: only show scalar features in QuickView feature selection
 - fix: QuickView -> Event -> Features labels in table were drawn
   on top of each other
 - fix: minor redrawing issues
 - fix: AttributeError when removing a plot on macOS
 - fix: increase maximum size of plots by factor of 100
 - fix: editing a polygon filter deselected it from the filter
 - enh: Increased speed in QuickView when scrolling through events