@@ -6,6 +6,7 @@
    filter set in filter ray (#22)
  - fix: Do not set the selected filter to the current QuickView
    filter when hitting apply in the analysis view filter panel (#18)
+ - fix: remove references to files if they are not needed anymore (#17)
  - enh: include (polygon) filter names in file names when
    exporting filters (#20)
 2.0.0b1
